syntax = "proto3";

package task;

option go_package = "github.com/svaloumas/valet/internal/handler/taskhdl/protobuf;pb";


message GetTasksResponse {
    repeated string tasks = 1;
}
 